fixed home logo positioning.

--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -23,6 +23,10 @@
     .home-banner {
         z-index: 20;
         width: 700px;
+        position: absolute;
+        top: 50%;
+        transform: translate3d(50%,-50%, 0);
+
         svg {
             path {
                 fill: white;
