--- a/resources/assets/scss/pages/about/_about.scss
+++ b/resources/assets/scss/pages/about/_about.scss
@@ -99,42 +99,6 @@
     padding-bottom: 90px;
     padding-top: 40px;
 
-    // .content-block {
-    //     background: $white;
-    //     z-index: 1
-    // }
-
-    // &:after,
-    // &:before {
-    //     z-index: -1;
-    //     position: absolute;
-    //     content: "";
-    //     bottom: 15px;
-    //     left: 10px;
-    //     width: 50%;
-    //     top: 80%;
-    //     max-width: 300px;
-    //     background: #777;
-    //     -webkit-box-shadow: 0 15px 10px #777;
-    //     -moz-box-shadow: 0 15px 10px #777;
-    //     box-shadow: 0 15px 10px #777;
-    //     -webkit-transform: rotate(-3deg);
-    //     -moz-transform: rotate(-3deg);
-    //     -o-transform: rotate(-3deg);
-    //     -ms-transform: rotate(-3deg);
-    //     transform: rotate(-3deg);
-    // }
-
-    // &:after {
-    //     -webkit-transform: rotate(3deg);
-    //     -moz-transform: rotate(3deg);
-    //     -o-transform: rotate(3deg);
-    //     -ms-transform: rotate(3deg);
-    //     transform: rotate(3deg);
-    //     right: 10px;
-    //     left: auto;
-    // }
-
     .testimonial {
         float: left;
         width: 30%;
@@ -206,13 +170,9 @@
     }
 }
 
-// .main-copy{
-//     //padding-bottom: 60px;
-
-//     h1.plain {
-//         //padding-bottom: 30px;
-//     }
-// }
+.main-copy + .main-copy{
+    padding-top: 60px;
+}
 
 .red-block {
     padding: 50px $gutter;
@@ -259,6 +219,23 @@
     }
 }
 
+.what-you-get {
+    @include pie-clearfix();
+    .what-you-get__node {
+        border: 2px solid transparent;
+        border-image: linear-gradient(23deg, rgba(241, 96, 96, 0.4) 0%, rgba(241, 96, 96, 0) 90%);
+        border-image-slice: 1;
+        padding: 60px 20px 0px 20px;
+        position: relative;
+        color: #f16060;
+        text-align: center;
+        line-height: 26px;
+        float: left;
+        width: 25%;
+        min-height: 320px;
+    }
+}
+
 .pricing-container {
     padding-bottom: 60px;
 
@@ -287,31 +264,21 @@
         border: 2px solid transparent;
         border-image: linear-gradient(23deg, rgba(241, 96, 96, 0.4) 0%, rgba(241, 96, 96, 0) 90%);
         border-image-slice: 1;
+        margin: 0 .5%;
         padding: 60px 20px 0px 20px;
         position: relative;
         color: #f16060;
         text-align: center;
         line-height: 26px;
         float: left;
-        width: 32%;
-        height: 267px;
+        width: 19%;
+        min-height: 380px;
 
         @include breakpoint($break-800) {
             max-width: 245px;
             float: none;
             width: 100%;
             margin: 20px auto;
-        }
-
-        &:nth-child(2) {
-            margin: 0 2%;
-            @include breakpoint($break-800) {
-                margin: 20px auto;
-            }
-        }
-
-        &:last-child {
-
         }
 
         .icon {
