--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -24,8 +24,8 @@
         z-index: 20;
         width: 700px;
         position: absolute;
-        top: 50%;
-        transform: translate3d(50%,-50%, 0);
+        top: 50%; left: 50%;
+        transform: translate3d(-50%,-50%, 0);
 
         svg {
             path {
