--- a/resources/assets/scss/pages/welcome/_welcome.scss
+++ b/resources/assets/scss/pages/welcome/_welcome.scss
@@ -80,9 +80,10 @@ ul.accordion {
 
     h2 {
         text-align: center;
-        font-weight: bold;
+        font-weight: 500;
         font-size: 25px;
         margin-bottom: 10px;
+        font-style: italic;
 
         .toggle {
             width: 30px;
