--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -27,6 +27,7 @@
 // pages
 @import "pages/home/home";
 @import "pages/about/about";
+@import "pages/about/about-paula";
 @import "pages/contact/contact";
 @import "pages/welcome/welcome";
 @import "pages/boomerang/boomerang";
