fixed font location issue

--- a/resources/assets/scss/core/_fonts.scss
+++ b/resources/assets/scss/core/_fonts.scss
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'SantEliaRoughAlt-BoldThr';
-    src: font-url('2E98A4_0_0.eot');
-    src: font-url('2E98A4_0_0.eot?#iefix') format('embedded-opentype'),
-         font-url('2E98A4_0_0.woff2') format('woff2'),
-         font-url('2E98A4_0_0.woff') format('woff'),
-         font-url('2E98A4_0_0.ttf') format('truetype');
+    src: url('../fonts/2E98A4_0_0.eot');
+    src: url('../fonts/2E98A4_0_0.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/2E98A4_0_0.woff2') format('woff2'),
+         url('../fonts/2E98A4_0_0.woff') format('woff'),
+         url('../fonts/2E98A4_0_0.ttf') format('truetype');
 }
 
 %brandon-grotesque {
