fixed intro video issues in safari

--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -16,6 +16,12 @@
             }
         }
 
+        &.intro-video {
+            > .inner {
+                display:none;
+                visibility: visible;
+            }
+        }
         > .inner {
             padding: 40px $gutter;
 
