--- a/resources/assets/scss/ui/_modal.scss
+++ b/resources/assets/scss/ui/_modal.scss
@@ -14,80 +14,80 @@
 /* Hide scroll bar */
 
 html.remodal-is-locked {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 /* Anti FOUC */
 
 .remodal,
 [data-remodal-id] {
-	display: none;
+    display: none;
 }
 
 /* Necessary styles of the overlay */
 
 .remodal-overlay {
-	position: fixed;
-	z-index: 9999;
-	top: -5000px;
-	right: -5000px;
-	bottom: -5000px;
-	left: -5000px;
+    position: fixed;
+    z-index: 9999;
+    top: -5000px;
+    right: -5000px;
+    bottom: -5000px;
+    left: -5000px;
 
-	display: none;
+    display: none;
 }
 
 /* Necessary styles of the wrapper */
 
 .remodal-wrapper {
-	position: fixed;
-	z-index: 10000;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 
-	display: none;
-	overflow: auto;
+    display: none;
+    overflow: auto;
 
-	text-align: center;
+    text-align: center;
 
-	-webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch;
 }
 
 .remodal-wrapper:after {
-	display: inline-block;
+    display: inline-block;
 
-	height: 100%;
-	margin-left: -0.05em;
+    height: 100%;
+    margin-left: -0.05em;
 
-	content: "";
+    content: "";
 }
 
 /* Fix iPad, iPhone glitches */
 
 .remodal-overlay,
 .remodal-wrapper {
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 /* Necessary styles of the modal dialog */
 
 .remodal {
-	position: relative;
+    position: relative;
 
-	outline: none;
+    outline: none;
 
-	-webkit-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-ms-text-size-adjust: 100%;
-	text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
 }
 
 .remodal-is-initialized {
-	/* Disable Anti-FOUC */
-	display: inline-block;
+    /* Disable Anti-FOUC */
+    display: inline-block;
 }
 
 
@@ -108,167 +108,182 @@ html.remodal-is-locked {
 
 .remodal-bg.remodal-is-opening,
 .remodal-bg.remodal-is-opened {
-	-webkit-filter: blur(3px);
-	filter: blur(3px);
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
 }
 
 /* Default theme styles of the overlay */
 
 .remodal-overlay {
-	background: rgba(43, 46, 56, 0.9);
+    background: rgba(43, 46, 56, 0.9);
 }
 
 .remodal-overlay.remodal-is-opening,
 .remodal-overlay.remodal-is-closing {
-	-webkit-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
 .remodal-overlay.remodal-is-opening {
-	-webkit-animation: remodal-overlay-opening-keyframes 0.3s;
-	animation: remodal-overlay-opening-keyframes 0.3s;
+    -webkit-animation: remodal-overlay-opening-keyframes 0.3s;
+    animation: remodal-overlay-opening-keyframes 0.3s;
 }
 
 .remodal-overlay.remodal-is-closing {
-	-webkit-animation: remodal-overlay-closing-keyframes 0.3s;
-	animation: remodal-overlay-closing-keyframes 0.3s;
+    -webkit-animation: remodal-overlay-closing-keyframes 0.3s;
+    animation: remodal-overlay-closing-keyframes 0.3s;
 }
 
 /* Default theme styles of the wrapper */
 
 .remodal-wrapper {
-	padding: 10px 10px 0;
+    padding: 50px;
 }
 
 /* Default theme styles of the modal dialog */
 
 .remodal {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	width: 100%;
-	margin-bottom: 10px;
-	padding: 35px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
 
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 
-	color: #2b2e38;
-	background: #fff;
+    color: #2b2e38;
+    background: #fff;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .remodal.remodal-is-opening,
 .remodal.remodal-is-closing {
-	-webkit-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
 .remodal.remodal-is-opening {
-	-webkit-animation: remodal-opening-keyframes 0.3s;
-	animation: remodal-opening-keyframes 0.3s;
+    -webkit-animation: remodal-opening-keyframes 0.3s;
+    animation: remodal-opening-keyframes 0.3s;
 }
 
 .remodal.remodal-is-closing {
-	-webkit-animation: remodal-closing-keyframes 0.3s;
-	animation: remodal-closing-keyframes 0.3s;
+    -webkit-animation: remodal-closing-keyframes 0.3s;
+    animation: remodal-closing-keyframes 0.3s;
 }
 
 /* Vertical align of the modal dialog */
 
 .remodal,
 .remodal-wrapper:after {
-	vertical-align: middle;
+    vertical-align: middle;
 }
 
 /* Close button */
 
 .remodal-close {
-	position: absolute;
-	top: 0;
-	left: 0;
+    position: absolute;
+    top: -35px;
+    right: 0;
 
-	display: block;
-	overflow: visible;
+    display: block;
+    overflow: visible;
 
-	width: 35px;
-	height: 35px;
-	margin: 0;
-	padding: 0;
+    width: 35px;
+    height: 35px;
+    margin: 0;
+    padding: 0;
 
-	cursor: pointer;
-	-webkit-transition: color 0.2s;
-	transition: color 0.2s;
-	text-decoration: none;
+    @include transition(background-color 0.2s);
 
-	color: #95979c;
-	border: 0;
-	outline: 0;
-	background: transparent;
+    cursor: pointer;
+    text-decoration: none;
+
+    color: $white;
+    background-color: transparent;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    z-index: 1;
 }
 
 .remodal-close:hover,
 .remodal-close:focus {
-	color: #2b2e38;
+    background-color: $lightRed;
+
+    &:before {
+        @include transform(rotate(90deg));
+    }
 }
 
 .remodal-close:before {
-	font-family: Arial, "Helvetica CY", "Nimbus Sans L", sans-serif !important;
-	font-size: 25px;
-	line-height: 35px;
+    @include transition( transform $transition);
+    font-family: Arial, "Helvetica CY", "Nimbus Sans L", sans-serif !important;
+    font-size: 25px;
+    line-height: 35px;
 
-	position: absolute;
-	top: 0;
-	left: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-	display: block;
+    display: block;
 
-	width: 35px;
+    width: 35px;
 
-	content: "\00d7";
-	text-align: center;
+    content: "\00d7";
+    text-align: center;
 }
 
 /* Dialog buttons */
 
 .remodal-confirm,
 .remodal-cancel {
-	font: inherit;
+    font: inherit;
 
-	display: inline-block;
-	overflow: visible;
+    display: inline-block;
+    overflow: visible;
 
-	min-width: 110px;
-	margin: 0;
-	padding: 12px 0;
+    min-width: 110px;
+    margin: 0;
+    padding: 12px 0;
 
-	cursor: pointer;
-	-webkit-transition: background 0.2s;
-	transition: background 0.2s;
-	text-align: center;
-	vertical-align: middle;
-	text-decoration: none;
+    cursor: pointer;
+    -webkit-transition: background 0.2s;
+    transition: background 0.2s;
+    text-align: center;
+    vertical-align: middle;
+    text-decoration: none;
 
-	border: 0;
-	outline: 0;
+    border: 0;
+    outline: 0;
 }
 
 .remodal-confirm {
-	color: #fff;
-	background: #81c784;
+    color: #fff;
+    background: #81c784;
 }
 
 .remodal-confirm:hover,
 .remodal-confirm:focus {
-	background: #66bb6a;
+    background: #66bb6a;
 }
 
 .remodal-cancel {
-	color: #fff;
-	background: #e57373;
+    color: #fff;
+    background: #e57373;
 }
 
 .remodal-cancel:hover,
 .remodal-cancel:focus {
-	background: #ef5350;
+    background: #ef5350;
 }
 
 /* Remove inner padding and border in Firefox 4+ for the button tag. */
@@ -276,126 +291,126 @@ html.remodal-is-locked {
 .remodal-confirm::-moz-focus-inner,
 .remodal-cancel::-moz-focus-inner,
 .remodal-close::-moz-focus-inner {
-	padding: 0;
+    padding: 0;
 
-	border: 0;
+    border: 0;
 }
 
 /* Keyframes
    ========================================================================== */
 
 @-webkit-keyframes remodal-opening-keyframes {
-	from {
-		-webkit-transform: scale(1.05);
-		transform: scale(1.05);
+    from {
+        -webkit-transform: scale(1.05);
+        transform: scale(1.05);
 
-		opacity: 0;
-	}
-	to {
-		-webkit-transform: none;
-		transform: none;
+        opacity: 0;
+    }
+    to {
+        -webkit-transform: none;
+        transform: none;
 
-		opacity: 1;
-	}
+        opacity: 1;
+    }
 }
 
 @keyframes remodal-opening-keyframes {
-	from {
-		-webkit-transform: scale(1.05);
-		transform: scale(1.05);
+    from {
+        -webkit-transform: scale(1.05);
+        transform: scale(1.05);
 
-		opacity: 0;
-	}
-	to {
-		-webkit-transform: none;
-		transform: none;
+        opacity: 0;
+    }
+    to {
+        -webkit-transform: none;
+        transform: none;
 
-		opacity: 1;
-	}
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes remodal-closing-keyframes {
-	from {
-		-webkit-transform: scale(1);
-		transform: scale(1);
+    from {
+        -webkit-transform: scale(1);
+        transform: scale(1);
 
-		opacity: 1;
-	}
-	to {
-		-webkit-transform: scale(0.95);
-		transform: scale(0.95);
+        opacity: 1;
+    }
+    to {
+        -webkit-transform: scale(0.95);
+        transform: scale(0.95);
 
-		opacity: 0;
-	}
+        opacity: 0;
+    }
 }
 
 @keyframes remodal-closing-keyframes {
-	from {
-		-webkit-transform: scale(1);
-		transform: scale(1);
+    from {
+        -webkit-transform: scale(1);
+        transform: scale(1);
 
-		opacity: 1;
-	}
-	to {
-		-webkit-transform: scale(0.95);
-		transform: scale(0.95);
+        opacity: 1;
+    }
+    to {
+        -webkit-transform: scale(0.95);
+        transform: scale(0.95);
 
-		opacity: 0;
-	}
+        opacity: 0;
+    }
 }
 
 @-webkit-keyframes remodal-overlay-opening-keyframes {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes remodal-overlay-opening-keyframes {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes remodal-overlay-closing-keyframes {
-	from {
-		opacity: 1;
-	}
-	to {
-		opacity: 0;
-	}
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 @keyframes remodal-overlay-closing-keyframes {
-	from {
-		opacity: 1;
-	}
-	to {
-		opacity: 0;
-	}
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 /* Media queries
    ========================================================================== */
 
-@media only screen and (min-width: 641px) {
-	.remodal {
-		max-width: 700px;
-	}
-}
+// @media only screen and (min-width: 641px) {
+//  .remodal {
+//      max-width: 700px;
+//  }
+// }
 
 /* IE8
    ========================================================================== */
 
 .lt-ie9 .remodal-overlay {
-	background: #2b2e38;
+    background: #2b2e38;
 }
 
 .lt-ie9 .remodal {
-	width: 700px;
+    width: 700px;
 }
