--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -406,37 +406,48 @@
     }
 }
 
-.social {
+ul.social {
     position:relative;
     z-index: 20;
     text-align:center;
-    height: 17px;
-    line-height: 17px;
     margin-top: 40px;
 
-    a {
+    li {
         display: inline-block;
         font-size: 12px;
         color: $fontColour;
-        text-decoration: none;
-        cursor:pointer;
+        cursor: pointer;
         margin: 0 10px;
-        vertical-align: top;
-        font-weight: normal;
+        @include transition(color $transition);
+
+        &:before {
+            content: '';
+            font-family: $icon;
+            font-size: 1.3em;
+            position: relative;
+            left: -4px; top: 0;
+        }
+
+        &.fb {
+            &:before {
+                content: '\e61f';
+            }
+        }
+
+        &.pin {
+            &:before {
+                content: '\e620';
+            }
+        }
+
+        &.dl {
+            &:before {
+                content: '\e619';
+            }
+        }
 
         &:hover {
             color: $lightRed;
-            // svg {
-            //     path {
-            //         fill: $lightRed;
-            //     }
-            // }
-        }
-        svg {
-            height: 17px;
-            display:inline-block;
-            margin-right: 5px;
-            @include transition(fill $transition);
 
         }
     }
