--- a/resources/assets/scss/dashboard/_dashboard.scss
+++ b/resources/assets/scss/dashboard/_dashboard.scss
@@ -72,35 +72,57 @@
         margin-right: auto;
         font-weight: 400;
 
+        &.dashboard {
+            color: #045F8D;
+            font-size: 22px;
+            font-style: italic;
+            font-weight: 500;
+            text-align: center;
+        }
+
         em {
             color: #045F8D;
             font-weight: 500;
         }
     }
 
+    .dashboard__sub-heading {
+        text-align: center;
+        color: $fontColour;
+        font-size: 0.875rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        padding-bottom: 6px;
+        font-weight: 700;
+        font-style: normal;
+        line-height: normal;
+    }
+
     ul.list-content {
         text-align: center;
+        width: 445px;
+        margin: auto;
 
         li {
             font-weight: 500;
             margin-bottom: 50px;
             color: #045F8D;
-            font-size: 18px; //might be temp;
-
+            font-size: 22px;
+            font-style: italic;
 
             span {
                 color: $black;
                 display: block;
                 font-size: 0.875rem;
-                font-style: italic;
                 text-transform: uppercase;
                 letter-spacing: 0.1em;
-                line-height: 1.3;
-                padding-bottom: 2px;
-                font-weight: 500;
+                padding-bottom: 6px;
+                font-weight: 700;
+                font-style: normal;
+                line-height: normal;
 
                 &:nth-child(2) {
-                    padding: 16px 0 2px;
+                    padding: 20px 0 6px;
                 }
             }
         }
@@ -390,7 +412,9 @@ ul.actions {
 
     ul.experience {
         max-width: 445px;
-        margin: auto auto 30px;
+        margin: 0 auto;
+        padding: 20px 0 50px;
+
         li {
             color: $blue-dark;
             font-style: italic;
@@ -428,6 +452,7 @@ ul.module-list {
     .content {
         max-width: 920px;
         margin: auto;
+        font-style: 18px;
     }
 
     li {
