--- a/resources/assets/scss/core/_base.scss
+++ b/resources/assets/scss/core/_base.scss
@@ -42,7 +42,7 @@ h1.plain {
 
 .dots {
     position: relative;
-    background: image-url('icons/bullets.svg') no-repeat top left;
+    background: url('../img/icons/bullets.svg') no-repeat top left;
     width: 70px;
     height: 6px;
     background-size: cover;
