--- a/resources/assets/scss/pages/contact/_contact.scss
+++ b/resources/assets/scss/pages/contact/_contact.scss
@@ -1,5 +1,5 @@
 .container.contact {
-    background: image-url('home-background.png') no-repeat center center;
+    background: url('../img/home-background.png') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
     padding: 50px;
