--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -272,6 +272,14 @@
                 padding-top: 80px;
             }
         }
+
+        .commitment__display {
+            font-style: italic;
+            font-weight: 500;
+            font-size: 18px;
+            padding: 12px 0;
+            text-decoration: underline;
+        }
     }
 
     .pre-complete,
