--- a/resources/assets/scss/pages/home/_question-nav.scss
+++ b/resources/assets/scss/pages/home/_question-nav.scss
@@ -22,16 +22,21 @@ $radius: 5px;
     height: $radius * 2;
     cursor: pointer;
     opacity: 0.8;
+
+    &.is-active {
+        a {
+            background: transparent;
+        }
+    }
 }
 
 .question-nav li a {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    @include transition(background-color $transition);
+    top: 0; left: 0;
+    width: 100%; height: 100%;
     outline: none;
     border-radius: 50%;
-    background-color: #CCCCCC;
+    background: $lightRed;
     text-indent: -999em; /* make the text accessible to screen readers */
     cursor: pointer;
     position: absolute;
@@ -59,7 +64,6 @@ $radius: 5px;
     width: $radius * 2 + 2px;
     height: $radius * 2 + 2px;
     border-radius: 50%;
-    background: $lightRed;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
