--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -255,6 +255,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         position: absolute;
         top: 0;
         left: 0;
