--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -238,6 +238,7 @@
         box-shadow: 0 0 30px rgba($fontColour, 0.05);
         display: flex;
         justify-content: center;
+        flex-direction: column;
         align-items: center;
         position: relative;
         overflow: hidden;
