--- a/resources/assets/scss/pages/you-to-you/_you-to-you.scss
+++ b/resources/assets/scss/pages/you-to-you/_you-to-you.scss
@@ -7,6 +7,7 @@
     margin-top: 30px;
 
 
+
     @include breakpoint($brk-medium) {
         display:block;
     }
@@ -42,6 +43,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     background: #f0f0f0;
     margin-bottom: 60px;
     position: relative;
