--- a/resources/assets/scss/dashboard/_dashboard-printstyle.scss
+++ b/resources/assets/scss/dashboard/_dashboard-printstyle.scss
@@ -15,33 +15,23 @@
 
 @page {
     size: A4 portrait;
+    margin: 0cm;
+}
+
+@page :first {
     margin: 0;
-}
-
-@page :left {
-  margin-left: 1mm;
-}
-
-@page :right {
-  margin-left: 1mm;
-}
-
-@page :top {
-  margin-left: 1mm;
-}
-
-@page :bottom {
-  margin-left: 1mm;
+    padding: 0;
+    top: 0; bottom: 0; right: 0;
+    position: relative;
+    page-break-before : none;
+    page-break-after: none;
+    orphans:0; widows:0;
 }
 
 
 @media print {
 
-    html, body {
-        width: 210mm;
-        height: 297mm;
-    }
-
+    /* THE INITAL RESET */
     *,
     *:before,
     *:after {
@@ -94,17 +84,13 @@
         page-break-after: avoid;
     }
 
-    .dashboard-module,
-    .module {
-        padding-top: 0;
-    }
+    /* USER STYLES */
 
-    .manifesto-cover {
-        background: url('../img/manifesto/cover-page.jpg') center center no-repeat !important;
-        background-size: cover !important;
-        height: 287mm;
-        width: 100%;
-        padding: 0; margin: 0;
+    html, body {
+        width: 210mm;
+        height: 297mm;
+        margin: 0; padding: 0;
+        min-height: initial;
     }
 
     header,
@@ -116,33 +102,40 @@
         display: none !important;
     }
 
+    .dashboard-module,
+    .module,
+    .content {
+        padding: 0 !important;
+    }
+
+    .manifesto-cover {
+        display: block;
+        background: url('../img/manifesto/cover-page.jpg') center center no-repeat !important;
+        background-size: cover !important;
+        height: 297mm !important;
+        width: 100% !important;
+    }
 
     .dashboard-module {
-        .is-not-complete,
-        .is-locked {
-            display: none;
-        }
 
+        .is-not-complete,
+        .is-locked,
         .actions {
             display: none;
         }
 
-        header[role=print] {
+        .manifesto-cover[role=print] {
             display: block !important;
             page-break-after: always;
         }
 
         div.end-page[role=print] {
+            page-break-before: always;
             display: block;
-            page-break-before: always;
-
-            background: url('../img/manifesto/background-image-test.jpg') center center no-repeat !important;
+            background: url('../img/manifesto/end-page.jpg') center center no-repeat !important;
             background-size: cover !important;
-            page-break-before: always;
-            width: 100%;
-            height: 280mm;
-            border: 0 !important;
-            padding: 20mm 0;
+            height: 297mm !important;
+            width: 100% !important;
         }
 
         .module-boomerang {
@@ -189,16 +182,27 @@
                 background-size: cover !important;
                 page-break-before: always;
                 width: 100%;
-                height: 280mm;
+                height: 297mm;
                 border: 0 !important;
                 padding: 20mm 0;
             }
 
         }
+
+        .inner-padding {
+            h2.title {
+                margin-bottom: 5rem;
+            }
+        }
+
+        .tagcloud {
+            width: 210mm;
+            background-color: rgba( $white, 0.2);
+            border: 1px solid red;
+        }
     }
 
     li.is-unlocked.is-complete {
-
         .content {
             max-height: 700px;
             transition: 0s ;
