--- a/resources/assets/scss/pages/welcome/_welcome.scss
+++ b/resources/assets/scss/pages/welcome/_welcome.scss
@@ -52,6 +52,9 @@ ul.accordion {
         .answer {
             text-align: center;
             padding: 10px 0;
+            &.left {
+                text-align: left;
+            }
         }
     }
 
