--- a/resources/assets/scss/dashboard/_dashboard-printstyle.scss
+++ b/resources/assets/scss/dashboard/_dashboard-printstyle.scss
@@ -108,12 +108,22 @@
         padding: 0 !important;
     }
 
+    p {
+        margin-bottom: 30px;
+    }
+
     .manifesto-cover {
         display: block;
         background: url('../img/manifesto/cover-page.jpg') center center no-repeat !important;
         background-size: cover !important;
         height: 297mm !important;
         width: 100% !important;
+    }
+
+    .module-gratitude {
+        p.dashboard {
+            font-size: 18px;
+        }
     }
 
     .dashboard-module {
@@ -184,21 +194,24 @@
                 width: 100%;
                 height: 297mm;
                 border: 0 !important;
-                padding: 20mm 0;
+                padding: 13mm 0;
             }
 
         }
 
-        .inner-padding {
-            h2.title {
-                margin-bottom: 5rem;
+        .module-un-stuck, {
+            p {
+                width: 445px;
             }
+        }
+
+        ul.list-content {
+            width: 445px;
         }
 
         .tagcloud {
             width: 210mm;
             background-color: rgba( $white, 0.2);
-            border: 1px solid red;
         }
     }
 
