--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -7,7 +7,6 @@
         height: 100%;
         visibility: hidden;
         min-width: 320px;
-
         &.background-video {
             > .inner {
                 @include breakpoint($break-620) {
@@ -15,51 +14,44 @@
                 }
             }
         }
-
         &.intro-video {
             > .inner {
-                display:none;
+                display: none;
                 visibility: visible;
             }
         }
         > .inner {
             padding: 40px $gutter;
-
             @include breakpoint($break-620) {
                 padding: 80px $gutter;
                 align-items: inherit;
             }
-
             .content {
                 margin: 0 auto;
             }
         }
-
         &.has-container {
             padding: 50px;
             z-index: 2;
-
             @include breakpoint ($break-620) {
                 padding: 0 !important;
             }
-
             @include breakpoint(max-height 400px) {
                 padding: 0 50px;
             }
-
             > .inner {
                 position: relative;
                 width: 100%;
                 height: 100%;
-                background: rgba(255,255,255,0.90);
+                background: rgba(255, 255, 255, 0.90);
                 visibility: hidden;
                 overflow: hidden;
-
                 &.vimeo {
                     background: transparent;
                     top: 50%;
                     overflow: visible;
-                    padding-bottom: 56.25%; /* 16:9 */
+                    padding-bottom: 56.25%;
+                    /* 16:9 */
                     padding-top: 0;
                     height: 0;
                     width: inherit;
@@ -68,9 +60,6 @@
                         padding-left: $gutter;
                         padding-right: $gutter;
                     }
-
-
-
                     iframe {
                         position: absolute;
                         //transform: translateY(-50%);
@@ -85,13 +74,14 @@
     }
 }
 
-
 .videoWrapper {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
+    padding-bottom: 56.25%;
+    /* 16:9 */
     padding-top: 25px;
     height: 0;
 }
+
 .videoWrapper iframe {
     position: absolute;
     top: 0;
@@ -108,28 +98,22 @@
         font-size: 40px;
         max-width: 320px;
         margin: auto;
-
         line-height: 1;
         color: $white;
-
         span {
             font-size: 18px;
         }
-
         &:after {
             width: 92px;
             border: 2px solid $white;
         }
     }
-
     .module-icon {
         text-align: center;
-
         &:after {
             position: relative;
             font-family: $icon;
             font-size: 90px;
-
             color: $white;
             position: relative;
         }
@@ -138,13 +122,11 @@
 
 .has-text {
     padding: 50px;
-
     &.module-section {
         > .inner {
             display: block;
         }
     }
-
     > .inner {
         .content {
             width: 445px;
@@ -161,17 +143,14 @@
             }
         }
     }
-
     .dots {
         margin: 60px auto;
-
         @include breakpoint($brk-small) {
             margin: 40px auto;
         }
     }
-
     .actions {
-        text-align:center;
+        text-align: center;
     }
 }
 
@@ -189,22 +168,18 @@
     border: 0;
     transform-origin: 50% 50%;
     transition: bottom 100ms ease-in-out;
-
     &.absol {
         position: absolute;
     }
-
     svg {
         width: 100%;
         height: 100%;
-
         path.arrow {
             fill: white;
             transform: scale(1);
             transform-origin: 50% 50%;
             transition: all 0.2s ease;
         }
-
         path.circle {
             fill: white;
             //transition: fill 0.3s ease, opacity 0.3s ease;
@@ -212,7 +187,6 @@
             transform-origin: 50% 50%;
             opacity: 1;
         }
-
         &:hover {
             path.arrow {
                 transform: scale(1.3);
@@ -232,23 +206,19 @@
         letter-spacing: 0.02em;
         max-width: 445px;
     }
-
     p {
         max-width: 445px;
         width: 100%;
         text-align: center;
         line-height: 26px;
     }
-
     blockquote {
         max-width: 445px;
     }
-
     .actions {
-        text-align:center;
+        text-align: center;
         margin: 40px 0;
     }
-
     .congrats-container {
         width: 100%;
         height: 100%;
@@ -261,19 +231,15 @@
         left: 0;
         opacity: 0;
         visibility: hidden;
-
         @include breakpoint($break-620) {
             align-items: inherit;
         }
-
         >.inner {
             padding: 40px $gutter;
-
             @include breakpoint($break-620) {
                 padding-top: 80px;
             }
         }
-
         .commitment__display {
             font-style: italic;
             font-weight: 500;
@@ -282,16 +248,12 @@
             text-decoration: underline;
         }
     }
-
-    .pre-complete,
-    .post-complete {
+    .pre-complete, .post-complete {
         display: table;
         margin: 0 auto;
-
         >.inner {
             display: table-cell;
             vertical-align: middle;
-
             .content {
                 margin: auto;
                 max-width: 445px;
@@ -301,10 +263,8 @@
     }
 }
 
-
-
 .actions {
-    text-align:center;
+    text-align: center;
 }
 
 .down-arrow {
@@ -313,9 +273,8 @@
     width: 45px;
     height: 45px;
     padding: 0;
-    display:inline-block;
-    cursor:pointer;
-
+    display: inline-block;
+    cursor: pointer;
     svg {
         width: 100%;
         height: 100%;
@@ -323,35 +282,29 @@
             fill: $lightRed;
         }
     }
-
     svg {
         width: 100%;
         height: 100%;
-
         path {
             transform-origin: 50% 50%;
             transition: all 0.2s ease;
         }
-
         path.arrow {
             fill: $lightRed;
             transform: scale(1);
             transform-origin: 50% 50%;
             transition: all 0.2s ease;
         }
-
         path.circle {
             fill: $lightRed;
             transition: all 0.3s ease;
             transform-origin: 50% 50%;
             opacity: 1;
         }
-
         &:hover {
             path.arrow {
                 transform: scale(1.3);
             }
-
             path.circle {
                 opacity: 0;
                 transform: scale(0.8);
@@ -368,24 +321,19 @@
     height: 50px;
     width: 160px;
     z-index: 99;
-
     @include breakpoint($brk-large) {
         width: 50px;
         height: 100px;
     }
-
     @include breakpoint($break-620) {
         display: none;
     }
-
     .module-icon {
         width: 50px !important;
         height: 50px;
         background: $lightRed;
         padding: 8px;
         float: right;
-
-
         svg {
             width: 100%;
             height: 100%;
@@ -394,7 +342,6 @@
             }
         }
     }
-
     .page-icon {
         &:after {
             position: relative;
@@ -405,7 +352,6 @@
             left: 0;
         }
     }
-
     .forum-icon {
         width: 110px;
         height: 50px;
@@ -414,19 +360,17 @@
         padding: 12px;
         font-size: 14px;
         color: $lightRed;
-        cursor:pointer;
+        cursor: pointer;
         text-decoration: none;
         font-weight: 500;
         float: left;
         background-color: rgba(255, 255, 255, 0.2);
-
         @include breakpoint($brk-large) {
             background-color: rgba(255, 255, 255, 0.9);
             width: 50px;
             border: none;
             padding: 15px 12px;
         }
-
         &:hover {
             svg {
                 path {
@@ -434,28 +378,23 @@
                 }
             }
         }
-
         svg {
             width: 25px;
             //height: 50px;
-            display:inline-block;
-            vertical-align:middle;
+            display: inline-block;
+            vertical-align: middle;
             margin-right: 10px;
-
             path {
                 fill: $lightRed;
                 stroke: $lightRed;
                 @include transition(fill $transition);
             }
-
             @include breakpoint($break-800) {
                 margin: 2px auto;
             }
         }
-
         span {
             line-height: 21px;
-
             @include breakpoint($brk-large) {
                 display: none;
             }
@@ -463,13 +402,60 @@
     }
 }
 
-[data-current-section="0"],
-[data-current-section="1"] {
+[data-current-section="0"], [data-current-section="1"] {
     .indicator {
         display: none;
     }
 }
 
+.spinner {
+    $border-thickness: 0.2em;
+    $radius: 3em;
+    $spinner-color: $lightRed;
+    $z: 2;
+
+    display: none;
+    position: fixed;
+    top: 50%; left: 50%;
+    border-radius: 50%;
+    z-index: $z;
+    height: $radius;
+    width: $radius;
+    border: $border-thickness solid rgba(255, 255, 255, 0.2);
+    border-left: $border-thickness solid $spinner-color;
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+
+    &:after {
+        border-radius: 50%;
+        width: $radius;
+        height: $radius;
+    }
+
+    .is-loading-video & {
+        display: block;
+    }
+}
 
 
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform:translate3d(-50%, -50%, 0) rotate(0deg);
+        transform:translate3d(-50%, -50%, 0) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translate3d(-50%, -50%, 0) rotate(360deg);
+        transform: translate3d(-50%, -50%, 0) rotate(360deg);
+    }
+}
 
+@keyframes load8 {
+    0% {
+        -webkit-transform: translate3d(-50%, -50%, 0) rotate(0deg);
+        transform: translate3d(-50%, -50%, 0) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translate3d(-50%, -50%, 0) rotate(360deg);
+        transform: translate3d(-50%, -50%, 0) rotate(360deg);
+    }
+}
