spinner position update a widths to svgs

--- a/resources/assets/scss/ui/_menu.scss
+++ b/resources/assets/scss/ui/_menu.scss
@@ -36,6 +36,13 @@
                 }
             }
 
+            &.completed-module {
+                color: $grey;
+                &:before {
+                    color: $grey;
+                }
+            }
+
             &:before {
                 $size: 15px;
                 content: '\e62e';
