fixed `next-section` firefox origin bug.

--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -62,7 +62,6 @@
                     }
                     iframe {
                         position: absolute;
-                        //transform: translateY(-50%);
                         top: 0;
                         left: 0;
                         width: 100%;
@@ -77,7 +76,6 @@
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%;
-    /* 16:9 */
     padding-top: 25px;
     height: 0;
 }
@@ -136,10 +134,6 @@
             color: $fontColour;
             @include breakpoint($brk-small) {
                 width: 100%;
-                //padding-top: 40px;
-                //padding: 60px $gutter $gutter; maybe this should be there, not sure need to check. There is a 20px padding on the inner. (line 15)
-                //another issue where there is an extra 60px more than the top should be.
-                //looks fine on 'un-stuck'
             }
         }
     }
@@ -174,19 +168,25 @@
     svg {
         width: 100%;
         height: 100%;
+
         path.arrow {
+            transform-origin: 50% 50%;
+            -webkit-transform-origin: 50% 50%;
+            -moz-transform-origin: 65px 55px;
             fill: white;
             transform: scale(1);
-            transform-origin: 50% 50%;
             transition: all 0.2s ease;
         }
+
         path.circle {
-            fill: white;
-            //transition: fill 0.3s ease, opacity 0.3s ease;
-            transition: all 0.3s ease;
             transform-origin: 50% 50%;
+            -webkit-transform-origin: 50% 50%;
+            -moz-transform-origin: 55px 55px;
+            fill: white;
+            transition: all 0.3s ease;
             opacity: 1;
         }
+
         &:hover {
             path.arrow {
                 transform: scale(1.3);
