--- a/resources/assets/scss/forum/_comment.scss
+++ b/resources/assets/scss/forum/_comment.scss
@@ -62,6 +62,17 @@ form.comment-form {
         width: 100%;
         font-size: 17px;
     }
+
+    .error-message {
+        display: inline-block;
+        border: 1px solid #aeaeae;
+        color: #aeaeae;
+        padding: 5px 10px;
+        text-align: left;
+        white-space: nowrap;
+        background: white;
+        font-size: 15px;
+    }
 }
 
 .comment-creation-date {
@@ -72,9 +83,6 @@ form.comment-form {
     right: 20px;
 }
 
-.comment-username {
-
-}
 form.reply-form {
     textarea {
         width: 100%;
